--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,24 @@
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
+		
         jcenter()
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
     }
+}
+repositories {
+	maven {
+		name = "Progwml6 maven"
+		url = "https://dvs1.progwml6.com/files/maven/"
+	}
+	
+	maven {
+		name = "ModMaven"
+		url = "https://modmaven.k-4u-nl"
+	}
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
@@ -94,6 +106,9 @@ dependencies {
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
+
+	compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.3.15:api")
+	runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.3.15")
 
     // Real examples
     // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
